# PandExo

./: .buildinfo  .buildinfo.bak  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  createInput.py  engine.html  genindex.html  hsttime.html  includeme.html  index.html  installation.html  installation_windows.html  jwstdict.html  jwstinput.html  main.py  newHST.html  objects.inv  pandexo.sh  py-modindex.html  pyproject.toml  run_test.py  run_web_server.py  search.html  searchindex.js  setup.cfg  setup.py  test_import.py  tutorialhst.html  tutorialjwst.html
.doctrees/: engine.doctree  environment.pickle  includeme.doctree  index.doctree  installation.doctree  installation_windows.doctree  jwstdict.doctree  jwstinput.doctree  tutorialhst.doctree  tutorialjwst.doctree
.github/workflows/: release.yml  tests.yml
_modules/: collections.html  index.html
_modules/concurrent/futures/: process.html
_modules/engine/: ComputeZ.html  bintools.html  compute_noise.html  create_input.html  hst.html  hst_smooth.html  justdoit.html  justplotit.html  jwst.html  load_modes.html  logs.html  pandexo.html  run_online.html
_modules/pandexo/engine/: bintools.html  compute_noise.html  create_input.html  hst.html  hst_smooth.html  justdoit.html  justplotit.html  jwst.html  load_modes.html  logs.html  pandexo.html  run_online.html
_sources/: engine.rst.txt  includeme.rst.txt  index.rst.txt  installation.rst.txt  installation_windows.rst.txt  jwstdict.rst.txt  tutorialhst.rst.txt  tutorialjwst.rst.txt
_static/: documentation_options.js
conda/: conda_upload.sh  meta.yaml
conda/pandexo.engine/: meta.yaml
d2to1-0.2.12.post1-py2.7.egg/EGG-INFO/: entry_points.txt
docs/: Makefile  conf.py  engine.rst  generate_tutorial_rst.py  index.rst  installation.rst  installation_windows.rst  jwstdict.rst  jwstinput.rst  make.bat  tutorialhst.rst  tutorialjwst.rst
docs/_build/doctrees/: engine.doctree  engine.reference.doctree  engine.static.css.doctree  engine.static.doctree  engine.static.fonts.doctree  engine.static.img.doctree  engine.static.js.doctree  engine.temp.doctree  engine.templates.doctree  engine.utils.doctree  environment.pickle  index.doctree  installation.doctree  tutorial.doctree  tutorialhst.doctree  tutorialjwst.doctree
docs/_build/html/: .buildinfo  engine.html  engine.utils.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorialhst.html  tutorialjwst.html
docs/_build/html/_modules/: collections.html  index.html
docs/_build/html/_modules/concurrent/futures/: process.html
docs/_build/html/_modules/engine/: ComputeZ.html  HST_TExoNS.html  compute_noise.html  create_input.html  hst.html  hst_smooth.html  justdoit.html  justplotit.html  jwst.html  load_modes.html  pandexo.html  run_online.html
docs/_build/html/_modules/engine/utils/: plotters.html
docs/_build/html/_sources/: engine.reference.rst.txt  engine.rst.txt  engine.static.css.rst.txt  engine.static.fonts.rst.txt  engine.static.img.rst.txt  engine.static.js.rst.txt  engine.static.rst.txt  engine.temp.rst.txt  engine.templates.rst.txt  engine.utils.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt  tutorialjwst.rst.txt
docs/_build/html/_static/: bizstyle.js
notebooks/: 1D Plotting.ipynb  2D Plotting.ipynb  Bokeh Plots.ipynb  Editing Input & Submitting Runs.ipynb  HST_WFC3.ipynb  HST_WFC3_w_ExoMAST.ipynb  JWST_Analyzing_Pandexo.ipynb  JWST_Running_Pandexo.ipynb  JWST_Running_Pandexo_w_ExoMAST.ipynb  RECTE Demonstration.ipynb  SOSS_Test.ipynb  wasp12b.txt
pandexo/: __init__.py
pandexo.engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pandexo/engine/: ComputeZ.py  RECTE.py  bintools.py  compute_noise.py  create_input.py  exomast.py  exosim_modes.py  extract_spec.py  get_pce.py  hst.py  hst_smooth.py  justdoit.py  justplotit.py  jwst.py  load_modes.py  logs.py  main.py  pandexo.py  run_online.py  synphot_compat.py  test.py
pandexo/engine/reference/: approved_users.csv  exo_input.json  miri_input.json  nircam_dhs_input.json  nircam_input.json  niriss_input.json  nirspec_input.json  wfc3_input.json
pandexo/engine/static/css/: bootstrapValidator.css  bootstrapValidator.min.css  starter.css
pandexo/engine/static/js/: bootstrapValidator.js  bootstrapValidator.min.js  form_validation.min.js  starter.formspec.js  starter.home.js  starter.homehst.js
pandexo/engine/templates/: about.html  base.html  calc_row.html  calc_rowhst.html  dashboard.html  dashboardhst.html  errors.html  home.html  new.html  newHST.html  tables.html  target_resolve.html  view.html  viewhst.html
pandexo/engine/utils/: plot_helpers.py  plotters.py  slider.html
reference/: exo_input.json  exosim_modes.py  miri_input.json  nircam_input.json  niriss_input.json
static/css/: starter.css
stsci.distutils-0.3.7-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stsci.distutils-0.3.7-py2.7.egg/stsci/distutils/: __init__.py  astutils.py  hooks.py  release.py  svnutils.py  version.py  versionutils.py
stsci.distutils-0.3.7-py2.7.egg/stsci/distutils/command/: build_optional_ext.py  easier_install.py
stsci.distutils-0.3.7-py2.7.egg/stsci/distutils/tests/: __init__.py  test_commands.py  test_hooks.py  util.py
templates/: dashboardspec.html  login.html  newspec.html
tests/: generate_pysynphot_reference.py  test_import.py  test_jwst_timing_noise.py  test_miri_lrs.py  test_nirspec_valid_channels.py  test_online_instrument_validation.py  test_plot_helpers.py  test_pysynphot_regression.py  test_run.py  test_run_online_routes.py  test_run_online_templates.py  test_saturation_handling.py  test_soss_multistripe_timing.py  test_synphot_migration.py
tests/data/: pysynphot_legacy_reference.json
utils/: plotters.py
