[metadata]
name = pandeia.engine
version = 0.1.dev0
summary = pandeia 3d exposure time calculator compute engine
description-file = README.md
author = Tim Pickering, Klaus Pontoppidan at Space Telescope Science Institute
author-email = help@stsci.edu
home-page = http://etcbrady.stsci.edu:4242
; Add this line to the classifier options if your project supports Python 3:
; Programming Language :: Python :: 3
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = 
	pandeia
	pandeia.engine
	pandeia.engine.defaults
	pandeia.engine.helpers
	pandeia.engine.helpers.schema

; scripts = scripts/sample_script

package_data = pandeia.engine.defaults = *.json

# [install_data]
# pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[zest.releaser]
release = no

[backwards_compat]
use_2to3 = True
zip_safe = False

