[metadata]
name = pandexo.engine
version = 0.6
summary = pandexo transiting exoplanet simulator
description-file = README.rst
author = Natasha Batalha at Pennsylvania State University
author-email = natasha.e.batalha@gmail.com
home-page = https://natashabatalha.github.io/PandExo
url = https://github.com/natashabatalha/PandExo
; Add this line to the classifier options if your project supports Python 3:
Programming Language :: Python :: 3
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = 
	pandexo
	pandexo.engine
	pandexo.engine.reference
	pandexo.engine.static
	pandexo.engine.static.css
	pandexo.engine.static.fonts
	pandexo.engine.static.img
	pandexo.engine.static.js
	pandexo.engine.temp
	pandexo.engine.templates
	pandexo.engine.utils


; scripts = scripts/sample_script

package_data = 
    pandexo.engine.templates = *.html
    pandexo.engine.reference = *.json
    pandexo.engine.static.css = *
    pandexo.engine.static.fonts = *
    pandexo.engine.static.img = *
    pandexo.engine.static.js = *

   
    
    
# [install_data]
# pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[zest.releaser]
release = no

[backwards_compat]
use_2to3 = True
zip_safe = False
